fix: Fix image display issues and improve charset handling
CSS Changes:
- Fix image aspect ratio distortion by using object-fit: contain
- Change image width from fixed 500px to 100% responsive
- Apply fixes to both desktop and mobile layouts
- Fix slider image display issues

Database Changes:
- Upgrade charset from utf8 to utf8mb4 for better character support
- Add explicit CHARACTER SET utf8mb4 setting

This fixes:
- Images being squashed/distorted in aspect ratio containers
- Character encoding issues with special characters
- Responsive image scaling on all devices

--- a/net8_rebirth/net8/02.ソースファイル/net8_html/css/ip.css
+++ b/net8_rebirth/net8/02.ソースファイル/net8_html/css/ip.css
@@ -1645,8 +1645,9 @@ picture {
 
 .slick-list a img{
 	display: block;
-	width: 500px;
-	height: auto;
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 	transform:scale(1);
 	transition:0.3s;
 }
@@ -1725,8 +1726,9 @@ section.rec-list ul li a .image-wrapper{
 
 section.rec-list ul li a img{
 	display: block;
-	width: 500px;
-	height: auto;
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 	transform:scale(1);
 	transition:0.3s;
 }
@@ -4003,7 +4005,10 @@ section.rec-list ul li a .image-wrapper{
 }
 
 section.rec-list ul li a img{
-	width: 500px;
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 }
 
 section.rec-list ul li a img:hover{
